# mmai

./: .gitignore  README.md  example.ipynb  pyproject-backup.txt  pyproject.toml  pyproject.toml_old  req.txt  requirements_full_install.txt  slurm-2578.out  slurm-61752347.out  slurm-66860886.out  uv-backup.txt
ManiSkill2_real2sim/.eggs/setuptools-75.8.2-py3.9.egg/EGG-INFO/: RECORD  requires.txt
ManiSkill2_real2sim/data/custom/models/cutting_board/: collision.mtl
ManiSkill2_real2sim/mani_skill2_real2sim/envs/custom_scenes/: base_env.py  base_env_anno.py  move_near_in_scene.py  move_near_in_scene_anno.py  move_near_in_scene_backup.py  put_on_in_scene.py
ManiSkill2_real2sim/mani_skill2_real2sim/examples/: demo_manual_control_custom_envs.py  test.ipynb  test_scene copy.ipynb  test_scene.ipynb
scripts/: .nfs5707d07ed96380b10000203b  octo_drawer_visual_matching.sh  octo_move_near_visual_matching_new.sh  octo_move_near_visual_matching_new_para.sh  octo_pick_coke_can_visual_matching_new_para.sh  octo_put_on_number.sh  octo_put_on_number_para.sh  openvla_move_near_visual_matching.sh  openvla_pick_coke_can_visual_matching_new_para.sh  openvla_put_on_number.sh  rt1_drawer_visual_matching.sh  rt1_drawer_visual_matching_remaining.sh  rt1_move_near_visual_matching_new.sh  rt1_move_near_visual_matching_new2.sh  rt1_pick_coke_can_visual_matching_new.sh  rt1_pick_coke_can_visual_matching_new2.sh  rt1_put_on_number_para.sh
scripts/mine/: convert_to_gif.sh  copy_videos.sh  eval.ipynb  eval_results.csv  minimal.py  test.ipynb  test.py
simpler_env/evaluation/: maniskill2_evaluator_annotated.py
simpler_env/utils/: metrics.py
tools/: calc_metrics_evaluation_videos_annotated.py
