[project]
name = "simpler-env"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "apache-beam>=2.64.0",
    "coacd>=1.0.7",
    "distrax==0.1.5",
    "dm-reverb[tensorflow]==0.14.0",
    "einops>=0.8.1",
    "flax==0.8.1",
    "gdown>=4.6.0",
    "gitpython>=3.1.44",
    "gymnasium>=0.28.1,<1.0",
    "h5py>=3.13.0",
    "imageio[ffmpeg]>=2.37.0",
    "ipython==8.22.2",
    "matplotlib>=3.10.1",
    "mediapy==1.2.0",
    "ml-collections>=1.1.0",
    "numpy<2.0",
    "opencv-python>=4.11.0.86",
    "plotly>=6.0.1",
    "pyyaml>=6.0.2",
    "rlds==0.1.8",
    "rtree>=1.4.0",
    "ruckig>=0.14.0",
    "sapien==2.2.2",
    "scipy==1.12.0",
    "tabulate>=0.9.0",
    "tensorflow-datasets==4.9.4",
    "tensorflow-hub==0.16.0",
    "tfds-nightly==4.9.4.dev202403220044",
    "tfp-nightly==0.25.0.dev20240322",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "transforms3d>=0.4.2",
    "trimesh>=4.6.8",
    "wandb>=0.19.10",
    "mani-skill2-real2sim",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "octo",
    "jax[cuda12]>=0.4.20",
    "jaxlib==0.4.20",
    "anytree",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "timm==0.9.10",
    "accelerate==0.32.1",
    "hdfs==2.7.3",
    "ninja>=1.11.1.4",
    "packaging>=25.0",
    "flash-attn",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "mani-skill2-real2sim",
    "simpler-env",
]

[tool.uv.sources]
octo = { path = "octo", editable = true }
simpler-env = { workspace = true }
mani-skill2-real2sim = { path = "ManiSkill2_real2sim", editable = true }
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.6.1/flash_attn-2.6.1+cu123torch2.3cxx11abiFALSE-cp310-cp310-linux_x86_64.whl" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["simpler_env"]
